# lspipe

./: README.org  flake.nix  lspipe.cabal  makefile  project-todo.org  proxy.org  test-strategy.org
app/: Main.hs
lib/: Cli.hs
lib/Lsp/: Agent.hs  LspRequest.hs  LspResponse.hs  Merger.hs  Proxy.hs  Rpc.hs
lib/Util/: Logger.hs
test/Lsp/: AgentSpec.hs  LspResponseSpec.hs  MergerSpec.hs
