cabal-version:   3.0
name:            lspipe
version:         0.1.0.0
license:         NONE
author:          Joe
maintainer:      joe@lspipe.com
build-type:      Simple

common warnings
    ghc-options: -Wall

executable lspipe
    import:           warnings
    main-is:          Main.hs
    build-depends:    base
    hs-source-dirs:   src
    default-language: Haskell2010
