cabal-version:   3.6
name:            lspipe
version:         0.1.0.0
license:         NONE
author:          Kristian Alvestad Nedrevold-Hansen
maintainer:      kristiananh@proton.me
build-type:      Simple

common settings
    ghc-options: -Wall
    default-language: GHC2021

library
  import: settings
  hs-source-dirs: lib
  build-depends:
      base
    , text
    , bytestring
    , containers
    , effectful
    , aeson
    , aeson-extra
    , optparse-applicative
    , time
  exposed-modules:
    Cli
    Lsp.LspResponse
    Lsp.Merger
  other-modules:
    Lsp.LspRequest
    Lsp.Rpc
    Lsp.Proxy
    Lsp.Agent
    Util.Logger

    
executable lspipe
    import:           settings
    main-is:          Main.hs
    build-depends:
        base
      , lspipe
    hs-source-dirs:   app

test-suite lspipe-tests 
  import: settings
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: test
  build-tool-depends: hspec-discover:hspec-discover == 2.*
  other-modules:
     Lsp.LspResponseSpec
     Lsp.MergerSpec
  build-depends:
      base
    , text
    , aeson
    , bytestring
    , hspec 
    , hspec-contrib
    , lspipe
    

